# rye-mono-repo

./: README.md  pyproject.toml
.github/workflows/: tests.yml
apps/app1/: pyproject.toml
apps/app1/src/app1/: __init__.py  __main__.py
apps/app1/tests/: test_app1.py
